add lua-protobuf to project. change some test files

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "deps/lua"]
 	path = deps/lua
 	url = https://github.com/lua/lua.git
+[submodule "deps/lua-protobuf"]
+	path = deps/lua-protobuf
+	url = https://github.com/starwing/lua-protobuf
