--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -7,6 +7,7 @@ include(../deps/zstd.cmake)
 include(../deps/lua.cmake)
 include(../deps/luasql.cmake)
 include(../deps/luv.cmake)
+include(../deps/lua-protobuf.cmake)
 include(../deps/checks.cmake)
 include(../src/lkcp/lkcp.cmake)
 include(../src/lspdlog/lspdlog.cmake)
