--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -2,8 +2,12 @@ cmake_minimum_required (VERSION 3.11.2)
 
 project(glory)
 
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/../output)
+set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/../output)
+
 include(../deps/libuv.cmake)
 include(../deps/zstd.cmake)
+include(../deps/rabbitmq-c.cmake)
 include(../deps/lua.cmake)
 include(../deps/luasql.cmake)
 include(../deps/luv.cmake)
@@ -12,6 +16,3 @@ include(../deps/checks.cmake)
 include(../src/lkcp/lkcp.cmake)
 include(../src/lspdlog/lspdlog.cmake)
 include(../src/lzstd/lzstd.cmake)
-
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/../output)
-set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/../output)
