add lrmq module to project. add a simple lua wrapper

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -16,3 +16,4 @@ include(../deps/checks.cmake)
 include(../src/lkcp/lkcp.cmake)
 include(../src/lspdlog/lspdlog.cmake)
 include(../src/lzstd/lzstd.cmake)
+include(../src/lrmq/lrmq.cmake)
