--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -17,3 +17,4 @@ include(../src/lkcp/lkcp.cmake)
 include(../src/lspdlog/lspdlog.cmake)
 include(../src/lzstd/lzstd.cmake)
 include(../src/lrmq/lrmq.cmake)
+include(../src/lredis/lredis.cmake)
